# GameZoea

./: .gitignore  Cargo.toml  README.md
core/: Cargo.toml
core/src/: lib.rs  macros.rs  main.rs
core/src/app/: control.rs  mod.rs  window.rs
core/src/emu/: cpu.rs  gb.rs  joypad.rs  mem.rs  mod.rs  ppu.rs  regs.rs  serial.rs  timer.rs
core/tests/: blargg.rs  cpu_tests.rs  mooneye.rs  ppu_tests.rs
core/tests/roms/: build_roms.sh  interrupt.asm
macros/: Cargo.toml
macros/src/: lib.rs
src/: main.rs
src/emu/: cpu.rs
